# aas-core3.0-cpp

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  aas_core3-config-version.cmake.in  aas_core3-config.cmake  annotated.html  changelog_8md.html  classaas__core_1_1aas__3__0_1_1iteration_1_1Descent-members.html  classaas__core_1_1aas__3__0_1_1iteration_1_1Descent.html  classaas__core_1_1aas__3__0_1_1iteration_1_1DescentOnce-members.html  classaas__core_1_1aas__3__0_1_1iteration_1_1DescentOnce.html  classaas__core_1_1aas__3__0_1_1iteration_1_1IDescent-members.html  classaas__core_1_1aas__3__0_1_1iteration_1_1IDescent.html  classaas__core_1_1aas__3__0_1_1iteration_1_1ISegment-members.html  classaas__core_1_1aas__3__0_1_1iteration_1_1ISegment.html  classaas__core_1_1aas__3__0_1_1iteration_1_1Iterator-members.html  classaas__core_1_1aas__3__0_1_1iteration_1_1Iterator.html  classaas__core_1_1aas__3__0_1_1jsonization_1_1ISegment-members.html  classaas__core_1_1aas__3__0_1_1jsonization_1_1ISegment.html  classaas__core_1_1aas__3__0_1_1jsonization_1_1SerializationException-members.html  classaas__core_1_1aas__3__0_1_1jsonization_1_1SerializationException.html  classaas__core_1_1aas__3__0_1_1types_1_1AdministrativeInformation-members.html  classaas__core_1_1aas__3__0_1_1types_1_1AdministrativeInformation.html  classaas__core_1_1aas__3__0_1_1types_1_1AnnotatedRelationshipElement-members.html  classaas__core_1_1aas__3__0_1_1types_1_1AnnotatedRelationshipElement.html  classaas__core_1_1aas__3__0_1_1types_1_1AssetAdministrationShell-members.html  classaas__core_1_1aas__3__0_1_1types_1_1AssetAdministrationShell.html  classaas__core_1_1aas__3__0_1_1types_1_1AssetInformation-members.html  classaas__core_1_1aas__3__0_1_1types_1_1AssetInformation.html  classaas__core_1_1aas__3__0_1_1types_1_1BasicEventElement-members.html  classaas__core_1_1aas__3__0_1_1types_1_1BasicEventElement.html  classaas__core_1_1aas__3__0_1_1types_1_1Blob-members.html  classaas__core_1_1aas__3__0_1_1types_1_1Blob.html  classaas__core_1_1aas__3__0_1_1types_1_1Capability-members.html  classaas__core_1_1aas__3__0_1_1types_1_1Capability.html  classaas__core_1_1aas__3__0_1_1types_1_1ConceptDescription-members.html  classaas__core_1_1aas__3__0_1_1types_1_1ConceptDescription.html  classaas__core_1_1aas__3__0_1_1types_1_1DataSpecificationIec61360-members.html  (+396 more)
.github/workflows/: ci-for-dev-scripts.yml  doc.yml
dev_scripts/: pyproject.toml  setup.py  update_to_aas_core_meta_codegen.py  update_to_aas_core_meta_codegen_and_testgen.py
dev_scripts/aas_core3/: __init__.py
dev_scripts/codegen/: codegen.py
dev_scripts/continuous_integration_of_dev_scripts/: precommit.py
dev_scripts/test_codegen/: common.py  generate_common_examples.py  generate_test_descent_and_descent_once.py  generate_test_jsonization_dispatch.py  generate_test_jsonization_of_concrete_classes.py  generate_test_jsonization_of_concrete_classes_outside_container.py  generate_test_stringification_of_enums.py  generate_test_verification.py  generate_test_wstringification_of_enums.py  generate_test_x_or_default.py  generate_test_xmlization_dispatch.py  generate_test_xmlization_of_concrete_classes.py  generate_test_xmlization_of_concrete_classes_outside_container.py  test_data_io.py
doc/: changelog.md  contributing.md  design-decisions.md  getting-started.md  main.md
experimental/re/: CMakeLists.txt  playground.cpp
include/aas_core/aas_3_0/: enhancing.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1c.js  all_1d.js  all_1e.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  (+99 more)
src/: BigInt.hpp  casting.cpp  casting.hpp  common.cpp  common.hpp  constants.cpp  constants.hpp  enhancing.hpp  iteration.cpp  iteration.hpp  jsonization.cpp  jsonization.hpp  stringification.cpp  stringification.hpp  types.cpp  types.hpp  verification.cpp  verification.hpp  visitation.cpp  visitation.hpp  wstringification.cpp  wstringification.hpp  xmlization.cpp  xmlization.hpp
test/: common.cpp  common.hpp  common_examples.cpp  common_examples.generated.cpp  common_examples.generated.hpp  common_examples.hpp  common_jsonization.cpp  common_jsonization.hpp  common_xmlization.cpp  common_xmlization.hpp  test_base64.cpp  test_descent_and_descent_once.cpp  test_descent_and_descent_once.generated.cpp  test_examples.cpp  test_jsonization_dispatch.generated.cpp  test_jsonization_of_concrete_classes.generated.cpp  test_jsonization_of_concrete_classes_outside_container.generated.cpp  test_revm.cpp  test_stringification_base64.cpp  test_stringification_of_enums.generated.cpp  test_verification.cpp  test_verification.generated.cpp  test_wstringification_of_enums.generated.cpp  test_x_or_default.generated.cpp  test_xmlization_dispatch.generated.cpp  test_xmlization_of_concrete_classes.generated.cpp  test_xmlization_of_concrete_classes_outside_container.generated.cpp
test_data/Descent/ContainedInEnvironment/Expected/administrativeInformation/: minimal.xml.trace
test_data/Descent/ContainedInEnvironment/Expected/annotatedRelationshipElement/: maximal.xml.trace  minimal.xml.trace
test_data/Descent/ContainedInEnvironment/Expected/assetAdministrationShell/: maximal.xml.trace  minimal.xml.trace
test_data/Descent/ContainedInEnvironment/Expected/basicEventElement/: minimal.xml.trace
test_data/Descent/ContainedInEnvironment/Expected/blob/: minimal.xml.trace
test_data/Descent/ContainedInEnvironment/Expected/capability/: minimal.xml.trace
test_data/Descent/ContainedInEnvironment/Expected/conceptDescription/: minimal.xml.trace
test_data/DescentOnce/: MaxAnnotatedRelationshipElement.trace  MaxEntity.trace  MaxOperationVariable.trace  MaxSubmodel.trace  MaxSubmodelElementCollection.trace  MaxSubmodelElementList.trace
(+1008 files in other folders)
